Change RHS to XLIX

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>RHS</title>
+    <title>XLIX</title>
 </head>
 <body>
-    Your RHS server is running correctly!
+    Your XLIX server is running correctly!
 </body>
 </html>
